--- a/package.json
+++ b/package.json
@@ -6,7 +6,14 @@
     "cf-typegen": "wrangler types --env-interface CloudflareBindings"
   },
   "dependencies": {
-    "hono": "^4.6.4"
+    "@types/pg": "^8.11.10",
+    "dotenv": "^16.4.5",
+    "drizzle-kit": "^0.25.0",
+    "drizzle-orm": "^0.34.1",
+    "hono": "^4.6.4",
+    "pg": "^8.13.0",
+    "postgres": "^3.4.4",
+    "tsx": "^4.19.1"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20241011.0",
