--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,6 +2,7 @@
 name = "lokerapi"
 main = "src/index.ts"
 compatibility_date = "2024-10-11"
+compatibility_flags = ["nodejs_compat_v2"]
 
 # Workers Logs
 # Docs: https://developers.cloudflare.com/workers/observability/logs/workers-logs/
